--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,4 +26,16 @@ http {
       proxy_pass       http://nextjs:3000/;
     }
   }
+
+  server {
+    listen 5000 ssl;
+
+    ssl_certificate     /etc/nginx/certs/nginx.crt;
+    ssl_certificate_key /etc/nginx/certs/nginx.key;
+
+    location / {
+      proxy_set_header Host $http_host;
+      proxy_pass       http://go:5000/;
+    }
+  }
 }
