--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,4 +38,13 @@ http {
       proxy_pass       http://go:5000/;
     }
   }
+
+  server {
+    listen 8080;
+
+    ssl_certificate     /etc/nginx/certs/nginx.crt;
+    ssl_certificate_key /etc/nginx/certs/nginx.key;
+
+    root  /var/www/html;
+  }
 }
