--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,11 +40,13 @@ http {
   }
 
   server {
-    listen 8080;
+    listen 8080 ssl;
 
     ssl_certificate     /etc/nginx/certs/nginx.crt;
     ssl_certificate_key /etc/nginx/certs/nginx.key;
 
-    root  /var/www/html;
+    index index.html;
+    # root  /var/www/html;
+    root /usr/share/nginx/html;
   }
 }
