--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-INFLUXDB_USERNAME=admin
-INFLUXDB_PASSWORD=admin
-
-GRAFANA_USERNAME=admin
-GRAFANA_PASSWORD=admin
+MYSQL_ROOT_PASSWORD=1234
+MYSQL_DATABASE=test_db
